--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,10 @@ table {
 	border-right: 1px solid black;
 }
 
+.stocktable .noborder {
+	border:none;
+}
+
 .stocktable .colborder {
 	border-left: 1px solid black;
 	border-right: 1px solid black;
